tests/tc/pos/noop_heap.js
/*@ foo :: (<l>)/l |-> {n:number} => void/l |-> {n:number} */
function foo(x){
    return;
}
