tests/tc/neg/illformed.js
/*@ bad :: (<l>)/l |-> { ref:<m> } => void/same */
function bad(x) {
    return;
}
